--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -66,7 +66,7 @@
                   ng-click="NowPlaying.playAudio()"></span>
             <span ng-if="NowPlaying.playing" class="audio-player-icon icon icon-pause-circle icon-main "
                   ng-click="NowPlaying.pause()"></span>
-            <!--<span class="icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>-->
+            <span class="audio-player-icon icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>
             <!--<span class="icon icon-repeat icon-sm" ng-click="NowPlaying.repeatTrack()"></span>-->
             <span class="icon icon-repeat-one icon-sm primaryTheme hidden"></span>
             <span class="icon icon-repeat icon-sm primaryTheme hidden"></span>
