--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,6 +1,6 @@
 <div class="holder now-playing text-center audio-player">
     <!--// need to refactor this.-->
-    <div ng-style="NowPlaying.item.data.image? {'background':'url(' + NowPlaying.item.data.image + ') no-repeat center center' ,
+    <div ng-style="{'background':'url(' + (NowPlaying.item.data.image? NowPlaying.item.data.image : 'http://s3-us-west-2.amazonaws.com/pluginserver.prod/plugins/d575ea0d-ba73-4edd-9c3d-37e49e44ac4f/widget/assets/images/now-playing.png') + ') no-repeat center center' ,
           '-o-filter': 'blur(10px) brightness(0.2)',
     '-moz-filter': 'blur(10px) brightness(0.2)',
     '-webkit-filter': 'blur(10px) brightness(0.2)',
@@ -15,7 +15,7 @@
     'height': '110%',
     'width': '110%',
     'z-index': '0'
-         }:{'background':'black'}"></div>
+         }"></div>
     <div class="media-center-plugin">
         <div class="media-header-link">
             <a ng-click="NowPlaying.add(NowPlaying.item.data.audioTitle,NowPlaying.item.data.audioUrl,NowPlaying.item.data.image,NowPlaying.item.data.artists)">Add
