--- a/widget/templates/layouts/video-player.html
+++ b/widget/templates/layouts/video-player.html
@@ -28,3 +28,15 @@
         <embed-video data-ng-if="WidgetMedia.item.data.videoUrl | isYoutubeVimeoLink" data-ng-href="{{WidgetMedia.item.data.videoUrl}}" controls="0"></embed-video>
     </div>
 
+    <script>
+        var monitor = setInterval(function(){
+            var elem = document.activeElement;
+
+            if(elem && elem.tagName == 'IFRAME'){
+                $("iframe.player").addClass('playing');
+                var audioPlayer = window.buildfire.services.media.audioPlayer;
+                audioPlayer.pause();
+                clearInterval(monitor);
+            }
+        }, 100);
+    </script>
