whiteTheme class added to more manu overlay

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -87,29 +87,29 @@
                 </div>
                 <hr class="none">
                 <div class="media-player-info margin-top-twenty">
-                    <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
+                    <h4 class="margin-zero ellipsis whiteTheme">{{NowPlaying.item.data.audioTitle}}</h4>
 
-                    <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
+                    <h5 class="margin-zero ellipsis whiteTheme">{{NowPlaying.item.data.artists}}</h5>
                 </div>
                 <hr class="none">
                 <div class="more-info-list padded">
                     <div class="text-center item">
-                        <a>Go to Playlist</a>
+                        <a class="whiteTheme">Go to Playlist</a>
                     </div>
                     <div class="text-center item">
-                        <a>Add to Playlist</a>
+                        <a class="whiteTheme">Add to Playlist</a>
                     </div>
                     <div class="text-center item">
-                        <a>Remove from Playlist</a>
+                        <a class="whiteTheme">Remove from Playlist</a>
                     </div>
                     <div class="text-center item">
-                        <a>Purchase</a>
+                        <a class="whiteTheme">Purchase</a>
                     </div>
                     <div class="text-center item">
-                        <a>Share</a>
+                        <a class="whiteTheme">Share</a>
                     </div>
                     <div class="text-center item">
-                        <a ng-click="NowPlaying.hideMoreInfo()">Cancel</a>
+                        <a ng-click="NowPlaying.hideMoreInfo()" class="whiteTheme">Cancel</a>
                     </div>
                 </div>
                 <hr class="none">
