Changed the track name css color by whiteTheme

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -31,9 +31,9 @@
             </div>
         </div>
         <div class="media-player-info margin-top-fifteen">
-            <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
+            <h4 class="margin-zero ellipsis whiteTheme">{{NowPlaying.item.data.audioTitle}}</h4>
 
-            <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
+            <p class="margin-zero ellipsis whiteTheme">{{NowPlaying.item.data.artists}}</p>
         </div>
         <div class="slider margin-top-ten" style="margin-bottom: -70px;">
             <div class="playerMP">
