Vimeo code revert

--- a/widget/templates/layouts/video-player.html
+++ b/widget/templates/layouts/video-player.html
@@ -28,6 +28,7 @@
         <embed-video data-ng-if="WidgetMedia.item.data.videoUrl | isYoutubeVimeoLink" data-ng-href="{{WidgetMedia.item.data.videoUrl}}" controls="0"></embed-video>
     </div>
 
+<!--
     <script>
         var monitor = setInterval(function(){
             var elem = document.activeElement;
@@ -39,4 +40,4 @@
                 clearInterval(monitor);
             }
         }, 100);
-    </script>
+    </script>-->
