Updated multiple layouts. Moved appStyle css to own css file.

--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -1,6 +1,6 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin layout3 text-overlay">
-        <div class="media-center-banner clearfix border-bottom-grey">
+        <div class="media-center-banner clearfix">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix text-overlay" ng-if="WidgetHome.showDescription()">
