--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -1,7 +1,7 @@
 <div class="holder padding-zero text-overlay">
     <div class="media-center-plugin layout2">
-        <div class="people-banner border-bottom-grey">
-            <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
+        <div class="people-banner">
+            <div class="people-bg clearfix">
                 <div class="people-holder clearfix">
                     <div class="people-media text-center">
                        <img data-ng-hide="WidgetMedia.showVideo"
@@ -17,6 +17,7 @@
             </div>
         </div>
         <div class="padded">
+			<hr class="small margin-top-zero">
             <div class="link-list">
                 <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
                    href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
