--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -1,6 +1,6 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin layout1 text-overlay">
-        <div class="plugin-banner clearfix border-bottom-grey">
+        <div class="plugin-banner clearfix">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix text-overlay" >
