--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -34,7 +34,7 @@
 
             <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
         </div>
-        <div class="slider margin-top-ten" style="margin-bottom: -70px;">
+        <div class="slider margin-top-ten" style="margin-bottom: -100px;">
             <div class="playerMP">
                 <div ng-if="NowPlaying.currentTime">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
                 <div><input type="range" min="0" max="{{NowPlaying.duration}}"
@@ -52,7 +52,7 @@
                          ng-style="NowPlaying.showVolume? {'visibility':'visible'}:{'visibility':'hidden'}" type="range"
                          min="0" max="1" step="0.1" ng-model="NowPlaying.volume"
                          ng-change="NowPlaying.changeVolume(NowPlaying.volume)"
-                         style="width:15%;visibility: visible;margin-top:40px;margin-left:80px"/>
+                         style="width:120px; position:relative; top:32px; visibility: visible;margin-top:40px;margin-left:135px;"/>
 
             <span class="audio-player-icon icon icon-volume-high icon-sm"
                   ng-click="NowPlaying.showVolume=!NowPlaying.showVolume"></span>
