--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -55,9 +55,9 @@
                          ng-change="NowPlaying.changeVolume(NowPlaying.volume)"
                          style="width:70%;visibility: visible;margin-top:40px;margin-left:46px"/>
 
-            <span class="audio-player-icon icon icon-volume-high icon-sm"
+            <!--<span class="audio-player-icon icon icon-volume-high icon-sm"
                   ng-click="NowPlaying.showVolume=!NowPlaying.showVolume"></span>
-            <span class="audio-player-icon icon icon-ellipsis icon-sm" ng-click="NowPlaying.openMoreInfoPopup()"></span>
+            <span class="audio-player-icon icon icon-ellipsis icon-sm" ng-click="NowPlaying.openMoreInfoPopup()"></span>-->
             <!--<span class="icon icon-cog icon-sm" ng-click="NowPlaying.openSettingsPopup()"></span>-->
         </div>
         <a class="media-player-btns margin-top-ten">
