--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -56,17 +56,17 @@
             <!--<span class="audio-player-icon icon icon-volume-high icon-sm"
                   ng-click="NowPlaying.showVolume=!NowPlaying.showVolume"></span>-->
             <span class="audio-player-icon icon icon-ellipsis icon-sm" ng-click="NowPlaying.openMoreInfoOverlay()"></span>
-            <span class="icon icon-cog icon-sm" ng-click="NowPlaying.getSettings()"></span>
+            <span class="audio-player-icon icon icon-cog icon-sm" ng-click="NowPlaying.getSettings()"></span>
         </div>
         <a class="media-player-btns margin-top-ten">
-            <span class="icon icon-shuffle icon-sm" ng-click="NowPlaying.shufflePlaylist()"></span>
+            <span class="audio-player-icon icon icon-shuffle icon-sm" ng-click="NowPlaying.shufflePlaylist()"></span>
             <span class="audio-player-icon icon icon-backward-circle " ng-click="NowPlaying.backward()"></span>
             <span ng-if="!NowPlaying.playing" class="audio-player-icon icon icon-play-circle icon-main "
                   ng-click="NowPlaying.playTrack()"></span>
             <span ng-if="NowPlaying.playing" class="audio-player-icon icon icon-pause-circle icon-main "
                   ng-click="NowPlaying.pauseTrack()"></span>
             <span class="audio-player-icon icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>
-            <span class="icon icon-repeat icon-sm" ng-click="NowPlaying.loopPlaylist()"></span>
+            <span class="audio-player-iconicon icon-repeat icon-sm" ng-click="NowPlaying.loopPlaylist()"></span>
             <span class="icon icon-repeat-one icon-sm primaryTheme hidden"></span>
             <span class="icon icon-repeat icon-sm primaryTheme hidden"></span>
         </a>
